--- a/Modéliser une onde mécanique.ipynb
+++ b/Modéliser une onde mécanique.ipynb
@@ -25,7 +25,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Paramétrage de l'onde F(x,t) comme fonction du temps et de l'espace "
+    "Paramétrage de l'onde F(x,t) : fonction (F) de l'espace (x) et du temps (t)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compléter en ajoutant : des valeurs (indiquer) ou des formules littérales (calculer)"
    ]
   },
   {
@@ -34,18 +41,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = 0.9\n",
-    "f = 2.0\n",
-    "T = 0.25\n",
-    "l=f*T\n",
-    "phi=0.1"
+    "A =      #indiquer l'amplitude de l'onde\n",
+    "f =      #indiquer la fréquence de l'onde\n",
+    "T =      #calculer période de l'onde\n",
+    "c=       #indiquer la vitesse de l'onde\n",
+    "l=       #calculer longueur d'onde de l'onde\n",
+    "phi=0.1  #déphasage"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Paramétrage de la fenêtre de représentation finale"
+    "Visualisation de l'onde progressive. Pour arrêter le temps, appuyer sur le bouton bleu en haut de la fenêtre."
    ]
   },
   {
@@ -55,26 +63,22 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "x = np.arange(0, 2*np.pi, 0.01)\n",
+    "x = np.arange(0, 4*l, 4*l/100)\n",
+    "\n",
+    "line, = ax.plot(x, A*np.cos(2*np.pi*(x/l)))\n",
     " \n",
-    "line, = ax.plot(x, np.sin(x))\n",
-    " \n",
-    "def animate(i):\n",
-    "    line.set_ydata(np.sin(x - i / 50))  # update the data.\n",
+    "def animate(t):\n",
+    "    line.set_ydata(A*np.cos(2*np.pi*(x/l - t / T))+phi)  # équation de l'onde.\n",
     "    return line,\n",
     " \n",
     "ani = animation.FuncAnimation(\n",
-    "    fig, animate, interval=20, blit=True, save_count=50)\n",
-    " \n",
+    "    fig, animate, frames=np.arange(0, 2*T, T/100),interval=20, blit=True)\n",
+    "plt.grid(True) \n",
+    "r=2E-3/(T/100)  #facteur de ralentissement pour l'affichage\n",
+    "plt.title(f\"affichage ralenti {r} fois\")\n",
+    "plt.xlabel('x (m)')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
