--- a/EC Epicentre.ipynb
+++ b/EC Epicentre.ipynb
@@ -9,21 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'folium'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-173a519ec3a7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'matplotlib'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'notebook'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mfolium\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'folium'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Ce programme en Langage Python permet de positionner l'épicentre d'un séisme \n",
     "# à partir de stations de sismographie.\n",
@@ -36,6 +24,10 @@
     "# Location=[,] et zoom_start donne la valeur du zoom utilisé pour la carte\n",
     "CarteEpicentre=folium.Map(location=[10,-60],zoom_start=5)\n",
     "\n",
+    "for i in range(3):\n",
+    "    folium.Marker([lat[i],long[i]],popup=folium.Popup(nom_station[i]),\n",
+    "    icon=folium.Icon(icon=\"flag\")).add_to(CarteEpicentre)\n",
+    "\n",
     "# Crée des tableaux de valeurs avec la latitude, la longitude, le nom, \n",
     "# et la distance à l'épicentre pour chaque station de sismographie\n",
     "lat=[10.191,18.54,16.2706]\n",
@@ -45,10 +37,10 @@
     "\n",
     "# Crée 2 cercles de rayon L autour des stations LFCV et HPAP\n",
     "# le rayon est calculé à partir de L et d'un facteur d'échelle adapté\n",
-    "# au zoom choisi (ici 210)\n",
+    "# au zoom choisi (ici 120)\n",
     "for i in range (2):\n",
-    "    folium.CircleMarker(lat[i],long[i]),\n",
-    "    radius=(210*distance-epicentre[i]).add_to(CarteEpicentre)\n",
+    "    folium.CircleMarker([lat[i],long[i]],\n",
+    "    radius=120*distance_epicentre[i]).add_to(CarteEpicentre)\n",
     "    \n",
     "# Enfin on crée un fichier dans un format lisible pour l'utilisateur dont\n",
     "# on indique le nom \"CarteFinale\" et l'extension \"html\"\n",
@@ -60,7 +52,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Pour visualiser la carte créée\n",
+    "CarteEpicentre "
+   ]
   }
  ],
  "metadata": {
