--- a/EC Epicentre.ipynb
+++ b/EC Epicentre.ipynb
@@ -24,16 +24,17 @@
     "# Location=[,] et zoom_start donne la valeur du zoom utilisé pour la carte\n",
     "CarteEpicentre=folium.Map(location=[10,-60],zoom_start=5)\n",
     "\n",
-    "for i in range(3):\n",
-    "    folium.Marker([lat[i],long[i]],popup=folium.Popup(nom_station[i]),\n",
-    "    icon=folium.Icon(icon=\"flag\")).add_to(CarteEpicentre)\n",
-    "\n",
     "# Crée des tableaux de valeurs avec la latitude, la longitude, le nom, \n",
     "# et la distance à l'épicentre pour chaque station de sismographie\n",
     "lat=[10.191,18.54,16.2706]\n",
     "long=[-66.832,-72.32,-61.504]\n",
     "nom_station=['LFCV','HPAP','GCAPE']\n",
     "distance_epicentre=[1.93,2.39]\n",
+    "\n",
+    "# Crée 3 icones (3 marqueurs) sur la carte, avec nom et position des stations\n",
+    "for i in range(3):\n",
+    "    folium.Marker([lat[i],long[i]],popup=folium.Popup(nom_station[i]),\n",
+    "    icon=folium.Icon(icon=\"flag\")).add_to(CarteEpicentre)\n",
     "\n",
     "# Crée 2 cercles de rayon L autour des stations LFCV et HPAP\n",
     "# le rayon est calculé à partir de L et d'un facteur d'échelle adapté\n",
