--- a/tableau d'avancement.ipynb
+++ b/tableau d'avancement.ipynb
@@ -36,10 +36,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cs_C4H10 =0  # butane\n",
-    "cs_O2 =0     # dioxygène\n",
-    "cs_CO2 = 0   # dioxyde de carbone\n",
-    "cs_H2O = 0   # eau"
+    "cs_C4H10 =   # butane\n",
+    "cs_O2 =      # dioxygène\n",
+    "cs_CO2 =     # dioxyde de carbone\n",
+    "cs_H2O =     # eau"
    ]
   },
   {
