--- a/champ électrostatique.ipynb
+++ b/champ électrostatique.ipynb
@@ -79,25 +79,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Propriétés du champ créé"
+    "Composantes du champ créé"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\fofie\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:5: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  \"\"\"\n",
-      "C:\\Users\\fofie\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:6: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Distance entre le corps 1 et point (x,y)\n",
     "r1=((xB-xA1)**2+(yB-yA1)**2)**0.5\n",
@@ -111,25 +100,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ajout d'un deuxième corps en deuxième partie de l'étude"
+    "Ajout d'une deuxième particule chargée en deuxième partie de l'étude"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\fofie\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:11: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  # This is added back by InteractiveShellApp.init_path()\n",
-      "C:\\Users\\fofie\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:12: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  if sys.path[0] == '':\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Caractéristiques\n",
     "\n",
