--- a/Etude mécanique.ipynb
+++ b/Etude mécanique.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "L'objectif est de mener une analyse complète du mouvement d'un système dans un référentiel galiléen. C'est à dire établir et représenter :<ul> <li> son vecteur vitesse pour chacune des positions <li> la variation du vecteur vitesse pour chacune des positions <li> une étude énergétique (cinétique, potentielle et mécanique) </li> </ul>"
+    "<div class=\"alert alert-block alert-danger\"> L'objectif est de mener une analyse complète du mouvement d'un système dans un référentiel galiléen. C'est à dire établir et représenter :<ul> <li> son vecteur vitesse pour chacune des positions <li> la variation du vecteur vitesse pour chacune des positions <li> une étude énergétique (cinétique, potentielle et mécanique) </li> </ul>"
    ]
   },
   {
@@ -37,7 +37,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Il faut indiquer le nom du fichier en csv et son chemin d'accès. <br> Ce fichier ne doit contenir <b> QUE</b> les valeurs expérimentales, il faut donc supprimer d'abord toute entête de paramètre, unité, titre etc.... <br> L'exemple par défaut est <i> C:\\bureau\\pointage.csv </i>, il convient de changer bien évidement cette chaine de caractères dans le code. <br> Attention à conserver les ' déjà présent ci-dessous."
+    "<div class=\"alert alert-block alert-info\">\n",
+    "        <b> Consignes </b> \n",
+    "<ul>\n",
+    "<li>Le fichier de données ne doit contenir <b> QUE</b> les valeurs expérimentales, il faut donc supprimer d'abord toute entête de paramètre, unité, titre etc.... </li>\n",
+    "<li> Il faut indiquer le nom du fichier en csv et son chemin d'accès. L'exemple par défaut est <i> C:\\bureau\\pointage.csv </i>, il convient de changer bien évidement cette chaine de caractères dans le code. </li> \n",
+    "<li> Attention à conserver les ' déjà présent ci-dessous.</li>\n",
+    "</ul>"
    ]
   },
   {
@@ -54,6 +60,29 @@
    "metadata": {},
    "source": [
     "<b> Extraction des données relatives à chaque position </b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "        <b> Consigne </b> \n",
+    "<ul><li>Compléter le programme en indiquant le numéro de colonne correspondant à chacune des grandeurs à indiquées.</li></ul>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "    <details>\n",
+    "        <summary> <b> Aides </b> </summary>\n",
+    "        <ul>\n",
+    "            <li> la numérotation commence par 0! </li>\n",
+    "        </ul>\n",
+    "    </details>\n",
+    "</div>"
    ]
   },
   {
@@ -100,6 +129,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "        <b> Consigne </b> \n",
+    "    <ul><li>Etablir la formule du vecteur vitesse pour la position Mi.</li>\n",
+    "   <li> Compléter le programme en décomposant cette formule selon les coordonnées.</li></ul>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "    <details>\n",
+    "        <summary> <b> Aides </b> </summary>\n",
+    "        <ul>\n",
+    "            <li> Pour chaque position Mi il faut regarder le point d'avant (Mi-1) et le point d'après (Mi+1) pour définir la vitesse au passage en Mi </li>\n",
+    "            <li> le temps du trajet se défini d'après la constante Tau qui représente la durée entre deux positions successives </li>\n",
+    "        </ul>\n",
+    "    </details>\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -133,6 +187,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "        <b> Consigne </b> \n",
+    "<ul><li>Retenir pour la suite que vit correspond à la norme donc la valeur de la vitesse pour chaque position.</li>\n",
+    "    <li>Justifier la formule écrite.</li>\n",
+    "    </ul>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -147,7 +212,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Représentation de la trajectoire et de la variation du vecteur vitesse du système"
+    "<b> Représentation de la trajectoire et de la variation du vecteur vitesse du système </b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "        <b> Consigne </b> \n",
+    "<ul><li>Etablir la formule de la variation du vecteur vitesse pour chaque position Mi.</li>\n",
+    "    <li>Décomposer cette formule selon ses composantes.</li>\n",
+    "    </ul>"
    ]
   },
   {
@@ -187,7 +263,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Données supplémentaires"
+    "<div class=\"alert alert-block alert-info\">\n",
+    "        <b> Consigne </b> \n",
+    "<ul><li>estimer la masse du système en faisant une recherche sur internet.</li>\n",
+    "\n",
+    "</ul>"
    ]
   },
   {
@@ -201,6 +281,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "        <b> Consigne </b> \n",
+    "<ul><li>Etablir la formule de l'énergie cinétique.</li>\n",
+    "<li>Etablir la formule de l'énergie potentielle de pesanteur.</li>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "    <details>\n",
+    "        <summary> <b> Aides </b> </summary>\n",
+    "        <ul>\n",
+    "            <li> La variable vitesse, telle qu'écrite dans le programme, est v.</li>\n",
+    "            <li> La variable altitude, tel qu'écrite dans le programme, est y.  </li>\n",
+    "        </ul>\n",
+    "    </details>\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -208,8 +314,25 @@
    "source": [
     "Ec=[XXX for v in vit]  #Ecrire la formule de l'énergie cinétique pour créer la liste Ec\n",
     "Ep=[XXX for z in y]   #Ecrire la formule de l'énergie potentiel de pesanteur pour créer la liste Ep\n",
-    "Ep=Ep[1:-1]\n",
-    "\n",
+    "Ep=Ep[1:-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "        <b> Consigne </b> \n",
+    "<ul><li>Etablir la formule de l'énergie mécanique que possède le système à la position Mi.</li>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Em=[]\n",
     "for i in range(0,len(Ec)):\n",
     "    Em.append(XXX) #calcul de l'énergie mécanique pour chaque position Mi. On notera Ec[i] et Ep[i] les énergies cinétique et potentiel correspondantes\n",
