--- a/Etude mécanique.ipynb
+++ b/Etude mécanique.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Etude en mécanique"
+    "# Etude en mécanique, avec un import de fichier"
    ]
   },
   {
@@ -23,7 +23,10 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "from math import *"
+    "import matplotlib.patches as mpatches\n",
+    "from math import *\n",
+    "from PIL import Image \n",
+    "from IPython.display import display"
    ]
   },
   {
@@ -39,10 +42,11 @@
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
     "        <b> Consignes </b> \n",
+    "<br> Charger vos données, au format csv. Dans l'exemple,le nom du fichier est <i>pointage.csv</i>.\n",
     "<ul>\n",
     "<li>Le fichier de données ne doit contenir <b> QUE</b> les valeurs expérimentales, il faut donc supprimer d'abord toute entête de paramètre, unité, titre etc.... </li>\n",
-    "<li> Il faut indiquer le nom du fichier en csv et son chemin d'accès. L'exemple par défaut est <i> C:\\bureau\\pointage.csv </i>, il convient de changer bien évidement cette chaine de caractères dans le code. </li> \n",
-    "<li> Attention à conserver les ' déjà présent ci-dessous.</li>\n",
+    "<li>Le fichier doit être chargé (glisser déposer) dans le repertoire github clône créé par mybinder.  </li>\n",
+    "<li>Cliquer ensuite sur le bouton Téléverser.  </li>\n",
     "</ul>"
    ]
   },
@@ -52,7 +56,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mesures=pd.read_csv(r'C:\\bureau\\pointage.csv',sep=';',decimal=',')"
+    "display(Image.open(\"Etude mécanique.png\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "        <b> Consignes </b> \n",
+    "<br> Modifier le programme \n",
+    "<ul>\n",
+    "<li> Il faut indiquer le nom de votre fichier en csv que vous avez impoté. L'exemple par défaut est <i> pointage.csv </i>, il convient de changer bien évidement cette chaine de caractères dans le code. </li> \n",
+    "<li> Attention à conserver les ' ' déjà présent ci-dessous.</li>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mesures=pd.read_csv(r'pointage.csv',sep=';',decimal=',', header=None)"
    ]
   },
   {
@@ -68,7 +94,7 @@
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
     "        <b> Consigne </b> \n",
-    "<ul><li>Compléter le programme en indiquant le numéro de colonne correspondant à chacune des grandeurs à indiquées.</li></ul>"
+    "<ul><li>Compléter le programme en indiquant le numéro de colonne correspondant à chacune des grandeurs à indiquées.</li><li>Relever la valeur de Tau.</li></ul>"
    ]
   },
   {
@@ -97,12 +123,13 @@
     "nbr=len(mesures)\n",
     "\n",
     "# extraction du temps et des positions au cours du mouvement\n",
-    "t=list(mesures.T[XXX])  #Indiquer le numéro de la colonne correspondant aux valeurs de la durée t \n",
-    "x=list(mesures.T[XXX])  #Indiquer le numéro de la colonne correspondant aux valeurs des abscisses x\n",
-    "y=list(mesures.T[XXX])  #Indiquer le numéro de la colonne correspondant aux valeurs des ordonnées y\n",
+    "t=list(mesures.T[0])  #Indiquer le numéro de la colonne correspondant aux valeurs de la durée t \n",
+    "x=list(mesures.T[1])  #Indiquer le numéro de la colonne correspondant aux valeurs des abscisses x\n",
+    "y=list(mesures.T[2])  #Indiquer le numéro de la colonne correspondant aux valeurs des ordonnées y\n",
     "\n",
     "# Calcul de l'intervalle Tau de temps entre deux positions successives\n",
-    "Tau=t[1]-t[0]"
+    "Tau=t[1]-t[0]\n",
+    "print(2*9.81*Tau)"
    ]
   },
   {
@@ -125,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b> Représentation de la trajectoire du vitesse du système </b>"
+    "<b> Représentation de la trajectoire et du vecteur vitesse du système </b>"
    ]
   },
   {
@@ -162,8 +189,8 @@
     "v_x=[]\n",
     "v_y=[]\n",
     "for i in range(1,len(x)-1):\n",
-    "    v_x.append(XXX)     #écrire la formule de la vitesse pour les abscisses de position. On note x[i] l'abscisse du point Mi\n",
-    "    v_y.append(XXX)     #écrire la formule de la vitesse pour les ordonnées de position. On note y[i] l'abscisse du point Mi\n",
+    "    v_x.append((x[i+1]-x[i-1])/(2*Tau))     #écrire la formule de la vitesse pour les abscisses de position. On note x[i] l'abscisse du point Mi\n",
+    "    v_y.append((y[i+1]-y[i-1])/(2*Tau))     #écrire la formule de la vitesse pour les ordonnées de position. On note y[i] l'abscisse du point Mi\n",
     "\n",
     "def representation_graphique1(x,y,v_x,v_y):\n",
     "    plt.figure(figsize=(10,10))\n",
@@ -205,7 +232,7 @@
    "source": [
     "vit=[]\n",
     "for i in range(0,len(v_x)):\n",
-    "    vit.append(sqrt(v_x[i]**2+v_y[i]**2)) #calcul de la valeur de la vitesse. en python la fonction racine carrée s'écrit sqrt et la puissance de 2 s'écrit **2"
+    "    vit.append(sqrt(v_x[i]**2+v_y[i]**2)) #calcul de la valeur de la vitesse. En python la fonction racine carrée s'écrit sqrt et la puissance de 2 s'écrit **2"
    ]
   },
   {
@@ -235,8 +262,8 @@
     "Dv_x=[]\n",
     "Dv_y=[]\n",
     "for i in range(1,len(v_x)-1):\n",
-    "    Dv_x.append(XXX) #écrire la formule de la variation de l'abscisse du vecteur vitesse. On note v_x[i] l'abscisse du vecteur vitesse au point Mi\n",
-    "    Dv_y.append(XXX) #écrire la formule de la variation de l'ordonnée du vecteur vitesse. On note v_y[i] l'ordonnée du vecteur vitesse au point Mi\n",
+    "    Dv_x.append(v_x[i+1]-v_x[i-1]) #écrire la formule de la variation de l'abscisse du vecteur vitesse. On note v_x[i] l'abscisse du vecteur vitesse au point Mi\n",
+    "    Dv_y.append(v_y[i+1]-v_y[i-1]) #écrire la formule de la variation de l'ordonnée du vecteur vitesse. On note v_y[i] l'ordonnée du vecteur vitesse au point Mi\n",
     "    \n",
     "def representation_graphique2(x,y,Dv_x,Dv_y):\n",
     "    plt.figure(figsize=(10,10))\n",
@@ -247,9 +274,29 @@
     "    plt.xlim(0.8*min(x),1.2*max(x))\n",
     "    plt.ylim(0.8*min(y),1.2*max(y))\n",
     "    for i in range(0,len(Dv_x)):\n",
-    "        V=plt.quiver(x[i+2], y[i+2] ,0.2*Dv_x[i] ,0.2*Dv_y[i],\n",
+    "        V=plt.quiver(x[i+2], y[i+2] ,2*Dv_x[i] , 2*Dv_y[i],\n",
     "         scale_units='xy',angles='xy', scale=12)\n",
     "representation_graphique2(x,y,Dv_x,Dv_y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b> Calcul et affichage de la valeur moyenne de la variation du vecteur vitesse </b>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Dv=[]\n",
+    "for i in range(0,len(Dv_y)):\n",
+    "    Dv.append(sqrt(Dv_x[i]**2+Dv_y[i]**2)) #calcul de la valeur de la vitesse. En python la fonction racine carrée s'écrit sqrt et la puissance de 2 s'écrit **2\n",
+    "Dvm=np.mean(Dv)\n",
+    "print(Dvm)"
    ]
   },
   {
@@ -276,7 +323,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m=XXX   #masse du système en kg\n",
+    "m=0.0027   #masse du système en kg\n",
     "g=9.81   #intensité de la pesanteur en N/kg"
    ]
   },
@@ -299,7 +346,7 @@
     "    <details>\n",
     "        <summary> <b> Aides </b> </summary>\n",
     "        <ul>\n",
-    "            <li> La variable vitesse, telle qu'écrite dans le programme, est v.</li>\n",
+    "            <li> La variable vitesse, telle qu'écrite dans le programme, est vit.</li>\n",
     "            <li> La variable altitude, tel qu'écrite dans le programme, est y.  </li>\n",
     "        </ul>\n",
     "    </details>\n",
@@ -312,9 +359,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Ec=[XXX for v in vit]  #Ecrire la formule de l'énergie cinétique pour créer la liste Ec\n",
-    "Ep=[XXX for z in y]   #Ecrire la formule de l'énergie potentiel de pesanteur pour créer la liste Ep\n",
-    "Ep=Ep[1:-1]"
+    "Ec=[]\n",
+    "for i in range(0,len(vit)):\n",
+    "    Ec.append(1/2*m*vit[i]**2)  #Ecrire la formule de l'énergie cinétique pour créer la liste Ec\n",
+    "\n",
+    "Ep=[]\n",
+    "for i in range(0,len(y)):\n",
+    "    Ep.append(m*g*y[i])  #Ecrire la formule de l'énergie potentiel de pesanteur pour créer la liste Ep \n",
+    "Ep=Ep[1:-1]\n",
+    "print(len(t))"
    ]
   },
   {
@@ -335,23 +388,27 @@
    "source": [
     "Em=[]\n",
     "for i in range(0,len(Ec)):\n",
-    "    Em.append(XXX) #calcul de l'énergie mécanique pour chaque position Mi. On notera Ec[i] et Ep[i] les énergies cinétique et potentiel correspondantes\n",
-    "    \n",
-    "\n",
+    "    Em.append(Ec[i]+Ep[i]) #calcul de l'énergie mécanique pour chaque position Mi. On notera Ec[i] et Ep[i] les énergies cinétique et potentiel correspondantes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.figure(figsize=(10,10))\n",
     "plt.grid(True)\n",
-    "plt.scatter(t,Ec,c='red') #ligne ajoutée par rapport au sujet qui permet de faire figurer les points\n",
-    "plt.plot(t,Ec,\"red\")\n",
-    "plt.scatter(t,Ep,c='blue') #ligne ajoutée par rapport au sujet qui permet de faire figurer les points\n",
-    "plt.plot(t,Ep,\"blue\")\n",
-    "plt.scatter(t,Em,c='green') #ligne ajoutée par rapport au sujet qui permet de faire figurer les points\n",
-    "plt.plot(t,Em,\"green\")\n",
-    "\n",
+    "plt.plot(t,Ec,marker='o',c='red') \n",
+    "plt.plot(t,Ep,marker='o',c='blue')\n",
+    "plt.plot(t,Em,marker='o',c='green') \n",
     "plt.xlabel(\"t en s\")\n",
     "plt.ylabel(\"Energie en J\")\n",
-    "\n",
     "plt.title(\"Bilan énergétique\")\n",
-    "\n",
+    "red_patch = mpatches.Patch(color='red', label='Ec')\n",
+    "blue_patch = mpatches.Patch(color='blue', label='Ep')\n",
+    "green_patch = mpatches.Patch(color='green', label='Em')\n",
+    "plt.legend(handles=[red_patch,blue_patch,green_patch ])\n",
     "plt.show()"
    ]
   },
@@ -361,6 +418,13 @@
    "source": [
     "<font size=\"1\"> contact : sophie.gronlier@ac-lille.fr </font>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
